--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <script type="text/javascript" src="scripts/main.js" defer></script>
 </head>
 <body>
+<div class="carousel-wrapper">
+
   <div class="carousel__btn carousel__btn_prev"></div>
 
   <ul class="carousel">
@@ -67,5 +69,8 @@
     <div class="carousel__dot"></div>
     <div class="carousel__dot"></div>
   </div>
+
+</div>
+
 </body>
 </html>
